tdf#166194 Chinese characters crowd in cell

regressioon from
    commit 11b15571475414ef853e21a6c96afa2ac81f848f
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Wed Oct 30 09:51:26 2024 +0200
    convert KernArray from sal_Int32 to double

Change-Id: I5c9a9d6caa0091f4be1c3307cc842b2ea4662728
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184449
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 8049d3f2345d5e6ead9fcb7b84f376fc84b82706)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184450
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit 9cd2b0f8c31d9b3bf6b95a307ec06b3bb3b9eb55)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184451
Tested-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>